trying to fix font issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4245,7 +4245,7 @@ input, select, textarea {
 	transition: .5s ease;
 	opacity:1;
 	color: white;
-	font-size: 20px;
+	font-size: inherit;
 	padding: 20px;
 	text-align: center;
   }
